--- a/runs/detect/train/args.yaml
+++ b/runs/detect/train/args.yaml
@@ -1,10 +1,10 @@
 task: detect
 mode: train
 model: yolov8s.pt
-data: dataset\data.yaml
+data: dataset/data.yaml
 epochs: 15
 time: null
-patience: 50
+patience: 100
 batch: 32
 imgsz: 640
 save: true
@@ -13,7 +13,7 @@ cache: false
 device: null
 workers: 8
 project: null
-name: train
+name: train7
 exist_ok: false
 pretrained: true
 optimizer: auto
@@ -94,6 +94,7 @@ shear: 0.0
 perspective: 0.0
 flipud: 0.0
 fliplr: 0.5
+bgr: 0.0
 mosaic: 1.0
 mixup: 0.0
 copy_paste: 0.0
@@ -102,4 +103,4 @@ erasing: 0.4
 crop_fraction: 1.0
 cfg: null
 tracker: botsort.yaml
-save_dir: runs\detect\train
+save_dir: /Users/aaviix/Desktop/UNIVERSITY/SEMESTER 4/COMPUTER VISION/Chess-Pieces-Computer-Vision/runs/detect/train7
